--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_core: ^1.14.0
   firebase_auth: ^3.3.12
   cloud_firestore: ^3.1.11
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
